--- a/index.html
+++ b/index.html
@@ -44,6 +44,11 @@
 
   <!-- main -->
   <main>
+    <div class="container">
+      <h3 id="numeri-random"></h3>
+      <h3 id="messaggio"></h3>
+      <h2 id="punteggio"></h2>
+    </div>
 
   </main>
   <!-- /main -->
